<?xml version="1.0"?>
<package format="2">
  <name>rt_gui</name>
  <version>0.0.1</version>
  <description>The real time gui package</description>

  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
