<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_gui_core</name>
  <version>0.0.1</version>
  <description>The rt_gui_core package includes the Qt core functionalities</description>

  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>readline</depend>
  <depend>pthread</depend>
  <depend>Qt5Widgets</depend>
  <depend>Qwt</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
