<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_gui_msgs</name>
  <version>0.0.1</version>
  <description>The rt_gui_msgs package includes messages and services used with rt_gui.</description>

  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 1">generate_messages</exec_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend condition="$ROS_VERSION == 1">message_runtime</depend>

  <depend>std_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  </export>


</package>
