<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_gui_ros</name>
  <version>0.0.1</version>
  <description>The ROS1 wrapper for the real time gui package</description>

  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rt_gui_msgs</depend>
  <depend>rt_gui_core</depend>

</package>
